[tool.poetry]
name = "chickadee"
version = "0.1.0"
description = "A tool to extract prompts from ChatGPT conversations"
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofile = "^3.8.8"
openai = "^1.35.13"
logfire = "^0.46.1"
instructor = "^1.3.4"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
